...
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="HeU-go-wZP"/>
                                                        <constraint firstAttribute="height" constant="44" id="JN9-y6-Fqr" userLabel="height = 44"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
                                                    <connections>
                                                        <action selector="likeButtonClicked:" destination="evt-OR-vYd" eventType="touchUpInside" id="kPg-4o-Xg3"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14 февраля 1988" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="czr-ci-1xG" userLabel="Date Label
                                                    <rect key="frame" x="24.000000000000007" y="196" width="105.66666666666669" height="16"/>
...
                                    <constraint firstAttribute="height" constant="60" id="704-3K-oX8"/>
                                    <constraint firstAttribute="width" secondItem="GXy-mE-I0S" secondAttribute="height" multiplier="1:1" id="rH6-gv-hxw"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8iM-QW-LlW">
                                <rect key="frame" x="16" y="612" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="ROs-ht-IdT"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти" titleAlignment="center">
                                    <backgroundConfiguration key="background">
...
                                <rect key="frame" x="8" y="68" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="0ii-8Q-daO"/>
                                    <constraint firstAttribute="height" constant="48" id="Zlb-uz-D6D"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="l8t-IY-1G7" eventType="touchUpInside" id="RBH-l1-NfR"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PwW-Aw-paR">
                                <rect key="frame" x="171.66666666666666" y="751" width="50" height="50"/>
...
